--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 
-<link rel="stylesheet" rel="preload" href="/Content/bootstrap.css" as="style">
+<link rel="stylesheet" rel="preload" href="SSC/Content/bootstrap.css" as="style">
 <link rel="stylesheet" rel="preload" href="/Content/font-awesome.css" as="style">
 <link href="/Content/bootstrap-datepicker.css" rel="stylesheet" media="screen">
 <link href="/Content/owl.carousel.css" rel="stylesheet" media="screen">
