--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 
 
-<link rel="stylesheet" rel="preload" href="/Content/bootstrap.css" as="style">
+<link rel="stylesheet" rel="preload" href="/Content/bootstrap.css" as="style"> 
 <link rel="stylesheet" rel="preload" href="/Content/font-awesome.css" as="style">
 <link href="/Content/bootstrap-datepicker.css" rel="stylesheet" media="screen">
 <link href="/Content/owl.carousel.css" rel="stylesheet" media="screen">
-<link href="/Content/library/assets/css/datatables.min.css" rel="stylesheet" media="screen">
-<link href="/Content/library/assets/css/print.css" rel="preload" media="print" type="text/css" rel="stylesheet" as="style">
+<link href="/Content/datatables.min.css" rel="stylesheet" media="screen">
+<link href="/Content/print.css" rel="preload" media="print" type="text/css" rel="stylesheet" as="style">
 <link rel="stylesheet" href="/Content/main.css" rel="preload" as="style">
   
 <script src="/Scripts/jquery-3.6.0.min.js"></script>
@@ -279,7 +279,7 @@
                 <div class="topmenupart">
                     <nav class="menulist">
                         <ul>
-                            <li><a tabindex="1" href="/Portal/Feedback">Feedback</a></li>
+                            <li><a tabindex="1" href="https://ssc.nic.in/Portal/Feedback">Feedback</a></li>
                             <li><a tabindex="2" href="http://sscold2.nic.in/" target="_blank">SSC Old Website</a></li>
                         </ul>
 
@@ -464,6 +464,11 @@
 <section class="bodypart">
     <div class="container">
         <div class="row">
+            <div class="innerpageCnt">
+                <h2>Candidate List</h2>
+                <h3><a href="Content/5_6086902526056072394.pdf" target="_blank">LIST OF CANDIDATES IN ROLL NO ORDER RECOMMENDED FOR APPOINTMENT 
+                    FOR THE POST OF STENOGRAPHER GRADE 'D'</a></h3>
+            </div>
             <div class="innerpageCnt">
                 <h2>Admit Card</h2>
                 <h3>Admit Cards may be downloaded from the following Regional websites</h3>
